Address last PR comments